[gd_scene load_steps=10 format=2]

[ext_resource path="res://test/Panel.gd" type="Script" id=2]
[ext_resource path="res://test/fps.gd" type="Script" id=7]
[ext_resource path="res://test/editor.gd" type="Script" id=8]
[ext_resource path="res://assets/PixelMiddle.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://editorPlayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://test/level_name_popup.gd" type="Script" id=11]
[ext_resource path="res://test/ItemList.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="Editor" type="Spatial"]
script = ExtResource( 8 )

[node name="fps_logger" type="Node" parent="."]
script = ExtResource( 7 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Panel" type="PanelContainer" parent="UI/MarginContainer"]
margin_left = 883.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 234.0
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 124.0
margin_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/Panel/MarginContainer"]
margin_right = 117.0
margin_bottom = 210.0

[node name="save_btn" type="Button" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 117.0
margin_bottom = 22.0
text = "save"

[node name="exit_btn" type="Button" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 117.0
margin_bottom = 48.0
text = "exit"

[node name="HSeparator" type="HSeparator" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 117.0
margin_bottom = 56.0

[node name="layers_btn" type="Button" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 117.0
margin_bottom = 82.0
text = "Add Layer"

[node name="layer_name_input" type="LineEdit" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 117.0
margin_bottom = 112.0
placeholder_text = "layer name"

[node name="layers_label" type="Label" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 117.0
margin_bottom = 132.0
text = "Layers"

[node name="layers_list" type="ItemList" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 117.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 40 )
max_columns = 2

[node name="HSeparator2" type="HSeparator" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 117.0
margin_bottom = 184.0

[node name="sky_btn" type="OptionButton" parent="UI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 117.0
margin_bottom = 210.0
text = "AnotherPlanet"
items = [ "AnotherPlanet", null, false, 0, null, "CartoonNightSky", null, false, 1, null, "ClearBlueSky", null, false, 2, null ]
selected = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 46.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="nameLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 16.0

[node name="editorModeLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 70.0
margin_bottom = 36.0
size_flags_horizontal = 0
text = "Layer: None"
valign = 1

[node name="level_name_popup" type="Popup" parent="UI"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5625
anchor_bottom = 0.58
margin_left = -24.0
margin_top = -20.0
margin_right = 56.0
margin_bottom = 117.0
popup_exclusive = true
script = ExtResource( 11 )

[node name="PanelContainer" type="PanelContainer" parent="UI/level_name_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 0 )

[node name="MarginContainer" type="MarginContainer" parent="UI/level_name_popup/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 137.0
margin_bottom = 183.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/level_name_popup/PanelContainer/MarginContainer"]
margin_right = 130.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="UI/level_name_popup/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 16.0
text = "create new level"

[node name="level_name" type="LineEdit" parent="UI/level_name_popup/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 130.0
margin_bottom = 46.0
placeholder_text = "Name"

[node name="accept_btn" type="Button" parent="UI/level_name_popup/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 130.0
margin_bottom = 72.0
text = "Accept"

[node name="Label2" type="Label" parent="UI/level_name_popup/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 130.0
margin_bottom = 92.0
text = "Saved labels"

[node name="ItemList" type="ItemList" parent="UI/level_name_popup/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 130.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 80 )
script = ExtResource( 12 )

[node name="editorPlayer" parent="." instance=ExtResource( 10 )]
